[metadata]
name = timeMachine
version = 2.1
author = "Dennis Risen"
author_email = "dar5@case.edu"
description = "Efficiently store and access read-only a dict of records as they were at sample-times in history."
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/drisen/timeMachine
project_urls =
    Bug Tracker = https://github.com/drisen/timeMachine/issues
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src